--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -4,14 +4,37 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-shop-homepage/blob/master/LICENSE)
  */
 
+html {
+	height:100%;
+}
+
 body {
   padding-top: 54px;
+  height:100%;
 }
 
 @media (min-width: 992px) {
   body {
     padding-top: 56px;
+    
   }
+}
+/*custom styling*/
+
+.wrapper {
+	min-height:100%;
+	position:relative;
+}
+
+.content {
+	
+}
+#footer {
+	
+	bottom:0;
+	width:100%;
+	position:absolute;
+	
 }
 
 
